[package]
name = "svc-utils"
version = "0.6.1"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/svc-utils"
repository = "https://github.com/foxford/svc-utils-rs"
description = "Bunch of reusable utilities"

[features]
authn-extractor = ["svc-authn", "svc-agent", "svc-error"]
body-limit-middleware = []
cors-middleware = []
log-middleware = []
metrics-middleware = ["once_cell"]

[dependencies]
axum = "0.6"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
once_cell = { version = "1.17", optional = true }
prometheus = { version = "0.13", default-features = false }
svc-agent = { git = "https://github.com/foxford/svc-agent-rs", branch = "ULMS-2377", optional = true }
svc-authn = { git = "https://github.com/foxford/svc-authn-rs", branch = "ULMS-2377", features = ["jose"], optional = true }
svc-error = { git = "https://github.com/foxford/svc-error-rs", branch = "ULMS-2377", optional = true }
tokio = { version = "1.28", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.28", features = ["full"] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"

[[example]]
name = "http_metrics"
