[package]
name = "svc-utils"
version = "0.7.1"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/svc-utils"
repository = "https://github.com/foxford/svc-utils-rs"
description = "Bunch of reusable utilities"

[features]
authn-extractor = ["svc-authn", "svc-agent", "svc-error"]
body-limit-middleware = []
cors-middleware = []
log-middleware = []
metrics-middleware = ["once_cell"]

[dependencies]
axum = "0.6"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
url = "2.3"
once_cell = { version = "1.17", optional = true }
prometheus = { version = "0.13", default-features = false }
svc-agent = { version = "0.20", optional = true }
svc-authn = { version = "0.8", features = ["jose"], optional = true }
svc-error = { version = "0.5", optional = true }
tokio = { version = "1.28", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.28", features = ["full"] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"

[[example]]
name = "http_metrics"
